force-app/main/default/objects/OpportunityLineItem/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <description>Customer-facing package name shown on the Order Form for a bundle. Falls back to the product name when blank.</description>
    <inlineHelpText>Optional package name for the Order Form. Leave blank to use the product name.</inlineHelpText>
    <label>Bundle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>