force-app/main/default/objects/OpportunityLineItem/fields/Bundle_Parent__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Product that is the parent bundle for this component. Child products with this field populated are hidden on the Order Form.</description>
    <inlineHelpText>Link this line to the bundle parent so it is grouped on the Order Form instead of appearing as its own line.</inlineHelpText>
    <label>Bundle Parent</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Bundle Components</relationshipLabel>
    <relationshipName>BundleComponents</relationshipName>
    <type>Lookup</type>
</CustomField>