force-app/main/default/objects/OpportunityLineItem/fields/Hide_On_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Hide_On_Order_Form__c</fullName>
    <description>True for bundle child products. Docusign Gen SuppressTableRow and the hideChildProducts parameter use this field to omit children from the Order Form.</description>
    <formula>NOT(ISBLANK(Bundle_Parent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Child products of a bundle are hidden on the generated Order Form.</inlineHelpText>
    <label>Hide On Order Form</label>
    <type>Checkbox</type>
</CustomField>