force-app/main/default/objects/OpportunityLineItem/fields/Order_Form_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Display_Name__c</fullName>
    <description>Name printed on the Order Form: bundle name for package parents, otherwise the product name.</description>
    <formula>IF(
    Is_Bundle__c,
    IF(ISBLANK(Bundle_Name__c), Name, Bundle_Name__c),
    Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Form Display Name</label>
    <type>Text</type>
</CustomField>