force-app/main/default/objects/OpportunityLineItem/fields/Order_Form_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Line_Type__c</fullName>
    <description>Bundle, Product, or Bundle Component. Used by Order Form grouping and Docusign Gen filters.</description>
    <formula>IF(
    NOT(ISBLANK(Bundle_Parent__c)),
    "Bundle Component",
    IF(Is_Bundle__c, "Bundle", "Product")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Form Line Type</label>
    <type>Text</type>
</CustomField>