force-app/main/default/objects/OpportunityLineItem/fields/Order_Form_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Price__c</fullName>
    <description>Price printed on the Order Form. Bundle parents include rolled-up child prices; hidden children are stamped at zero so visible lines sum to the document total.</description>
    <inlineHelpText>Maintained automatically. Bundle price is the package total shown to the customer.</inlineHelpText>
    <label>Order Form Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>